Creation et modification de l'index.

--- a/index.html
+++ b/index.html
@@ -1,1 +1,35 @@
- 
+<!DOCTYPE.html>
+
+	<head>
+		<title> Poney </title>
+	</head>
+
+	<body>
+		<header>
+			<h1>Un titre</h1>
+		</header>
+
+		<main>
+			<section>
+				<div>
+					<nav>
+						<ul>
+							<li>Quentin</li>
+							<li>Cyril</li>
+						</ul>
+					</nav>
+				</div>
+			</section>
+		</main>
+
+		<footer>
+			<p>
+				Voici le pied de page.
+				<br />
+				@ 2018
+			</p>
+		</footer>
+
+	</body>
+
+</html>
